# Hakuna_Matata

./: .gitignore  .gitmodules  README  makefile  memory_aligned.c  memory_aligned.h  memory_pool.h  memory_pool_use_index.h  ptr_hide_data.h  unit_test_memory_aligned.c  unit_test_memory_pool.cpp  v_table_exploer.cpp
JustCode/: CMakeLists.txt
JustCode/inc/: adapter.h  delegate.h  enum_string_struct.h  list_memory_pool.h  list_memory_pool_use_index.h  memory_check.h  memory_pool.h  memory_pool_use_index.h  ptr_hide_data.h  ref_count.h  singleton.h  str_utils.h
JustCode/run_test/: memory_check.cpp  run_test_adapter.cpp  run_test_cmd_utils.c  run_test_delegate.cpp  run_test_enum_string_struct.cpp  run_test_list_memory_pool.cpp  run_test_list_memory_pool_use_index.cpp  run_test_memory_check.cpp  run_test_memory_pool.cpp  run_test_memory_pool_use_index.cpp  run_test_timer.cpp  unit_test_memory_aligned.c  unit_test_ptr_hide_data.c
JustCode/src/: adapter.cpp  cmd_utils.c  memory_aligned.c  memory_pool.c
play/android/hello_ndk/: CMakeLists.txt  build.sh
play/c/cmake_external_build/: CMakeLists.txt  build.bat  build.sh  readme.md
play/c/cmake_external_build/cmake/: FindSodium.cmake
play/c/cmake_external_build/libsodium/: CMakeLists.txt  build.bat  build.sh
play/c/cmake_external_build/libsodium/cmake/: libsodium.cmake
play/c/cmake_external_build/src/foo/: main.c
play/c/cmake_external_build/src/foo_module/: foo_module.c  foo_module.h
play/c/event_loop/: CMakeLists.txt  readme.md
play/c/event_loop/example_linux/epoll_eventfd/: evloop.c  evloop.h  evloop_epoll.c  evloop_epoll.h  use_epoll_eventfd.c  use_eventfd.c
play/c/event_loop/example_linux/eventfd/: use_eventfd.c
play/c/event_loop/example_linux/pipe/: event_pipe.c  event_pipe.h  use_pipe.c
play/c/event_loop/example_linux/select_eventfd/: evloop_select.c  evloop_select.h  use_select_eventfd.c
play/c/false_sharing/: CMakeLists.txt  build.sh  build.yml  readme.md
play/c/false_sharing/example/false_sharing/: main.c
play/c/false_sharing/example/false_sharing_case1/: main.c
play/c/false_sharing/example/false_sharing_case2/: main.c
play/c/hide_symbol/bar_1.0/: CMakeLists.txt
play/c/hide_symbol/bar_1.0/bar/: bar.c  bar.h  bar_config.h.in
play/c/hide_symbol/bar_1.0/cmake/: barConfig.cmake.in
play/c/hide_symbol/baz_1.0/: CMakeLists.txt
play/c/hide_symbol/baz_1.0/baz/: baz_config.h.in  main.c
play/c/hide_symbol/baz_1.0/cmake/: bazConfig.cmake.in
play/c/hide_symbol/bob_1.0/: CMakeLists.txt
play/c/hide_symbol/bob_1.0/bob/: bob.c  bob.h  bob_config.h.in
play/c/hide_symbol/bob_1.0/cmake/: bobConfig.cmake.in
play/c/hugepage_test/: CMakeLists.txt  readme.md
play/c/hugepage_test/src/: config.h.in  instrument_id.h  main.c
play/c/pfpa/: CMakeLists.txt  build.sh  readme.md
play/c/pfpa/apps/hello/: main.c
play/c/pfpa/apps/str/: main.c  str_handle.c  str_handle.h
play/c/pfpa/apps/tgw/: main.c  tgw_handle.c  tgw_handle.h
play/c/pfpa/pfpa/: pfpa.h  pfpa_config.h.in  pfpa_context.c  pfpa_context.h  pfpa_log_handle.c  pfpa_log_handle.h  pfpa_macro.h  pfpa_murmurhash3.c  pfpa_murmurhash3.h  pfpa_pcap_handle.c  pfpa_pcap_handle.h  pfpa_struct.h  pfpa_tcp_handle.c  pfpa_tcp_handle.h  pfpa_udp_handle.c  pfpa_udp_handle.h
play/c/read_boot_info/: CMakeLists.txt  bootstrap.sh
play/c/read_boot_info/example/blkid_read_partition/: blkid_read_partition.c
play/c/read_boot_info/example/read_mbr/: read_mbr.c
play/c/tcp_n_data/: CMakeLists.txt  readme.md
play/c/tcp_n_data/src/: cfg.c  cfg.h  cli.c  cli.h  data.c  data.h  main.c  serv.c  serv.h  snd_method.c  snd_method.h
play/c/use_simd/: CMakeLists.txt  build.bat  build.sh  build_android.sh
play/c/use_simd/examples/matrix/: main.c
play/c/use_simd/src/common/: config.h.in  matrix.c  matrix.h  utils.c  utils.h
play/c/use_simd/tests/unittest_matrix/: unittest_matrix.cpp
play/c/use_simd/tut/case00_shuffle/: main.c
play/cpp/lib_vars/: CMakeLists.txt
play/cpp/lib_vars/bar/: bar.h
use/c/use-getopt/: CMakeLists.txt  readme.md
use/c/use-getopt/example/sample2/: sample2.c
use/c/use-libevent_2.1.8/: CMakeLists.txt
use/c/use-libevent_2.1.8/src/client/: client.c  peer.c  peer.h
use/c/use-libevent_2.1.8/src/common/: common_export_macro.h  object.c  object.h  peer.c  peer.h  peer_io_thread.c  peer_io_thread.h  utils.c  utils.h
use/c/use-libevent_2.1.8/src/common_cpp/: base_server.cpp  (+4 more)
use/c/use_libxml2/: CMakeLists.txt  bootstrap.sh  download_deps.sh  readme.md
use/c/use_mbedtls/: CMakeLists.txt  build.yml  gen_keys.sh  mbedtls.yml  readme.md
use/c/use_mugglec_pkg/: CMakeLists.txt  Dockerfile  build.sh  docker-compose.yml  readme.md  run_docker_hello.sh
use/c/use_ncurses/: CMakeLists.txt  bootstrap.sh  readme.md
use/c/use_ncurses/cmake/: FindMugglec.cmake
use/c/use_ncurses/scripts/: func.sh
use/c/use_odbc/: CMakeLists.txt  build.sh  install_unixodbc.sh  readme.md
use/c/use_odbc/cmake/: general.cmake
use/c/use_odbc/etc/: odbc.ini  odbcinst.ini
use/c/use_odbc/sql/: run.sh
use/c/use_openssl/: CMakeLists.txt  build.yml  gen_cert.sh  gen_keys.sh  hpb.yml  readme.md
use/c/use_openssl/cert_conf/: ca_csr.conf  server_crt.conf  server_csr.conf
use/c/use_openssl/modules/: mugglec.yml  openssl.unix.yml  openssl.win.yml
use/c/use_rdtsc/: CMakeLists.txt
use/c/use_sanitizer/: CMakeLists.txt  build.yml  readme.md
use/c/use_unity_test/: CMakeLists.txt  bootstrap.sh  download_deps.sh  readme.md
use/c/use_unity_test/foo/: foo.h
use/c/use_wolfssl/: CMakeLists.txt  bootstrap.bat  bootstrap.sh  build.bat  build.sh  gen_cert.sh  readme.md
use/c/use_wolfssl/cert_conf/: ca_crt.conf  ca_csr.conf
use/c/use_wolfssl/cmake/: mugglec.cmake.in  wolfssl.cmake.in
use/c/use_wolfssl/example/: readme.md
use/cpp/use-ftxui/: CMakeLists.txt
use/cpp/use-ftxui/cmake/: ftxui.cmake.in  mugglec.cmake.in
use/cpp/use-gflags/: CMakeLists.txt
use/cpp/use-gflags/cmake/: gflags.cmake.in
use/cpp/use-gflags/src/: example.cpp
use/cpp/use_gbenchmark/: CMakeLists.txt
use/cpp/use_tinyxml2/: CMakeLists.txt
use/cpp/use_tinyxml2/etc/: hello.xml
(+1070 files in other folders)
